--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/32dfc70dbe.js" crossorigin="anonymous"></script>
 
     <script defer src="./node_modules/jquery/dist/jquery.js"></script>
-    <script defer type="module" src="./js/script.js"></script>
+    <script defer src="./js/script.js"></script>
 </head>
 
 <body>
@@ -22,9 +22,17 @@
             <button>Search</button>
         </form>
         <div id="cities" class="none">
-            <my-card></my-card>
-         
-
+            <div class="element">
+                <div class="header"><i class="fa-solid fa-plus"></i></div>
+                <div class="discription">
+                    <ul id="data" class="">
+                        <li class=""></li>
+                        <li class=""></li>
+                        <li class=""></li>
+                        <li class=""></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
