--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 </head>
 
 <body>
+    <header>
+        <h1>Прогноз погоды</h1>
+    </header>
     <div class="container">
         <form id="citySearch" class="mb-4 m-auto">
             <input id="cityName" type="text" placeholder="Search by city name...">
-            <button>Search</button>
+            <button  class="btn btn-primary">Search</button>
         </form>
         <div id="cities" class="none">
             <div class="element">
