--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Прогноз погоды</h1>
     </header>
     <div class="container">
-        <form id="citySearch" class="mb-4 m-auto">
+        <form id="citySearch" placeholder=".form-control-lg" aria-label=".form-control-lg example" >
             <input id="cityName" type="text" placeholder="Search by city name...">
             <button  class="btn btn-primary">Search</button>
         </form>
